--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     presión atmosférica, generando lluvias torrenciales, vientos fuertes, oleaje alto y marea de
                     tormenta .
                 </p>
-                <img src="img/a.png" alt="Imagen del ciclón" srcset="a" ;">
+                <img src="img/a.jpg" alt="Imagen del ciclón" srcset="a" ;">
                 <p>
                     Este fenómeno se originó en el océano Pacífico Sur, cerca de la línea ecuatorial, y se desplazó
                     hacia el
